--- a/plugin.xml
+++ b/plugin.xml
@@ -6,6 +6,7 @@
 
     <version>1.0.0</version>
     <copyright>Friends of Shopware</copyright>
+    <license>MIT</license>
     <link>https://friendsofshopware.github.io/</link>
     <author>Friends of Shopware</author>
     <compatibility minVersion="5.2.0"/>
